portfolio-cms.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: portfolio-cms

  labels:

    app: portfolio-cms

spec:

  replicas: 1

  selector:

    matchLabels:

      app: portfolio-cms

  template:

    metadata:

      labels:

        app: portfolio-cms

    spec:

      containers:

        - name: portfolio-cms

          image: directus/directus:12.2.0

          ports:

            - containerPort: 8055

          volumeMounts:

            - name: uploads

              mountPath: /directus/uploads

      volumes:

        - name: uploads

          persistentVolumeClaim:

            claimName: portfolio-directus-uploads

---

apiVersion: v1

kind: Service

metadata:

  name: portfolio-cms-svc

spec:

  selector:

    app: portfolio-cms

  ports:

    - port: 80

      targetPort: 8055

      nodePort: 30081

  type: NodePort
