portfolio-db.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: portfolio-db

  labels:

    app: portfolio-db

spec:

  replicas: 1

  selector:

    matchLabels:

      app: portfolio-db

  template:

    metadata:

      labels:

        app: portfolio-db

    spec:

      containers:

        - name: portfolio-db

          image: postgres:16

          ports:

            - containerPort: 5432

          volumeMounts:

            - name: portfolio-db-storage

              mountPath: /var/lib/postgresql/data

      volumes:

        - name: portfolio-db-storage

          persistentVolumeClaim:

            claimName: portfolio-db-data

---

apiVersion: v1

kind: Service

metadata:

  name: portfolio-db-svc

spec:

  selector:

    app: portfolio-db

  ports:

    - port: 5432

      targetPort: 5432
